<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingLeft="@dimen/margin_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_5"
                android:layout_height="@dimen/margin_5"
                android:src="@drawable/oval_red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="Step 1:检查需要下载的日记"
                android:textColor="@color/first_title_color"
                android:textSize="15sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sync_download_check"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_20"
            android:text="检查数据"
            android:textColor="@color/primary_white"
            android:textSize="14sp"
            android:background="@drawable/bg_corner_primary"/>

        <TextView
            android:id="@+id/tv_sync_download_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:visibility="invisible"
            android:text="@string/sync_upload_need_total_count"
            android:textColor="@color/first_title_color"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_line_half"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/primary_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingLeft="@dimen/margin_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_5"
                android:layout_height="@dimen/margin_5"
                android:src="@drawable/oval_red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="Step 2:开始下载日记"
                android:textColor="@color/first_title_color"
                android:textSize="15sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sync_download_start"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:clickable="false"
            android:text="开始下载"
            android:textColor="@color/primary_white"
            android:textSize="14sp"
            android:background="@drawable/selector_oss_btn"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sync_download_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/sync_upload_need_success_count"
                android:textColor="@color/first_title_color"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_sync_download_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/sync_upload_need_fail_count"
                android:textColor="@color/first_title_color"
                android:textSize="14sp"/>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_line_half"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/primary_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:text="当前状态："
            android:textColor="@color/primary_black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_sync_download_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_upload_wait"
            android:textColor="@color/primary_black"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>